--- a/index.html
+++ b/index.html
@@ -2,31 +2,27 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Patrick's Portfolio</title>
 </head>
 <body>
 <h1>Patrick Davies's Portfolio</h1>
 <h2>I'm a Web Developer</h2>
 <hr/>
-<a href="./public/movie-ranking.html">Movie Ranking Project</a>
-<img src="./assets/images/My Top Movies.png" alt="Screenshot Of Movie Ranking Project">
-<a href="./public/birthday-invite.html">Birthday Invite Project</a>
-<img src="./assets/images/Birthday Invite.png" alt="Screenshot Of Birthday Project">
+<h3>
+    <a href="./public/movie-ranking.html">Movie Ranking Project</a>
+</h3>
 
+<img src="./assets/images/My Top Movies.png" alt="Screenshot Of Movie Ranking Project" height="200">
+
+<h3>
+    <a href="./public/birthday-invite.html">Birthday Invite Project</a>
+</h3>
+
+<img src="./assets/images/Birthday Invite.png" alt="Screenshot Of Birthday Project" height="200">
+
+<hr/>
+
+<a href="./public/about.html">About Me</a>
+<a href="./public/contact.html">Contact Me</a>
 </body>
 </html>
-
-
-
-
-<!-- TODO 4: Add titles/subtitles etc. -->
-
-<!-- TODO 5: Add a link to the project pages -->
-
-<!-- TODO 6: Add images to show the project previews
-HINT for TODO 6: You can use the height attribute set to 200 to make the image smaller:
-https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
-
-<!-- TODO 7: Add the Contact Me and About Me page links -->
