--- a/index.html
+++ b/index.html
@@ -1,27 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>Patrick's Portfolio</title>
 </head>
+
 <body>
 <h1>Patrick Davies's Portfolio</h1>
 <h2>I'm a Web Developer</h2>
 <hr/>
-<h3>
-    <a href="./public/movie-ranking.html">Movie Ranking Project</a>
-</h3>
 
+<h3><a href="./public/movie-ranking.html">Movie Ranking Project</a></h3>
 <img src="./assets/images/My Top Movies.png" alt="Screenshot Of Movie Ranking Project" height="200">
-
-<h3>
-    <a href="./public/birthday-invite.html">Birthday Invite Project</a>
-</h3>
-
+<h3><a href="./public/birthday-invite.html">Birthday Invite Project</a></h3>
 <img src="./assets/images/Birthday Invite.png" alt="Screenshot Of Birthday Project" height="200">
-
-<hr/>
-
+<hr />
 <a href="./public/about.html">About Me</a>
 <a href="./public/contact.html">Contact Me</a>
 </body>
